syntax = "proto3";

option go_package = ".;users_pb";

package users_pb;

message CreateUserRequest {
  string Username = 1;
  string Password = 2;
  string Name = 3;
  string Email = 4;
}

message CreateUserResponse {
  string ID = 1;
  string Username = 2;
  string Name = 3;
  string Email = 4;
}

message GetUserRequest {
  string Username = 1;
}

message GetUserResponse {
  string ID = 1;
  string Username = 2;
  string Password = 3;
  string Name = 4;
  string Email = 5;
}

message UpdateUserRequest {
  string ID = 1;
  string Username = 2;
  string Password = 3;
  string Name = 4;
  string Email = 5;
}

message UpdateUserResponse {
  string ID = 1;
  string Username = 2;
  string Name = 3;
  string Email = 4;
}

message DeleteUserRequest {
  string ID = 1;
  string Username = 2;
}

message DeleteUserResponse {
  string ID = 1;
  string Username = 2;
}

service UsersService {
   rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
   rpc GetUser(GetUserRequest) returns (GetUserResponse);
   rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
   rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
}
